add countdown + live to next match

--- a/src/app/components/geolocation/nearest/nearest.component.html
+++ b/src/app/components/geolocation/nearest/nearest.component.html
@@ -4,7 +4,7 @@
       <!-- <span class="tag">At a stadium near you</span> -->
       <!-- <span class="float-right muted">Distance: 2.4 km</span> -->
       <h6>{{nearestGame.venue}}</h6>
-      <a class="tip right-link">Get Tickets</a>
+      <a class="tip right-link" href="https://www.afl.com.au/tickets" target="_blank">Get Tickets</a>
       <p>
         <span>Matchup: {{nearestGame.hteam}} vs {{nearestGame.ateam}}</span><br />
         <span class="muted">Time: {{nearestGame.date | date: 'fullDate'}}, {{nearestGame.date | date: 'shortTime'}}</span>
