--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.css
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.css
@@ -33,5 +33,5 @@ a{display: block;margin: 1rem 0 0.5rem;text-align: right;}
   max-width: 80px;
   position: absolute;
   left: -40px;
-  bottom: 0;
+  bottom: 20px;
 }
