--- a/src/app/components/home/ladder-preview/ladder-preview.component.css
+++ b/src/app/components/home/ladder-preview/ladder-preview.component.css
@@ -14,7 +14,7 @@ h6{
 table{border-top: none;}
 tr td, tr th{padding: 0.25rem 0.5rem;}
 
-table tr:nth-child(n+5) {display:none;}
+/* table tr:nth-child(n+5) {display:none;} */
 @media(max-width: 768px){
   .ladder-preview{
     position: relative;
