--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -7,7 +7,7 @@
                     <a routerLink="/"><span class="logo">AUFooty</span></a>
                 </div>
                 <div class="col-md-8">
-                  <div><app-choose-team></app-choose-team></div>
+                  <app-choose-team></app-choose-team>
                 </div>
             </div>
         </div>
@@ -27,8 +27,11 @@
                 <h1>Your #1 source for everything Footy</h1>
             </div>
             <div class="offset-md-1 col-md-3">
-              <app-fixtures-preview></app-fixtures-preview>
+              <app-ladder-preview></app-ladder-preview>
             </div>
+          </div>
+          <div class="col-md-8">
+            <app-fixtures-preview></app-fixtures-preview>
           </div>
         </div>
     </div>
