--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,10 @@
     <div class="col-md-8">
       <router-outlet></router-outlet>
     </div>
-  <div class="offset-md-1 col-md-3 offset-matches">
-    <app-ladder-preview></app-ladder-preview>
+  <div class="offset-md-1 col-md-3 twitter-feed">
+      <ngx-twitter-timeline
+      [data]="{sourceType: 'url', url: 'https://twitter.com/AFL'}"
+      [opts]="{tweetLimit: 3}"></ngx-twitter-timeline>
   </div>
 </div>
 </div>
