--- a/src/app/components/home/fixtures-preview/fixtures-preview.component.css
+++ b/src/app/components/home/fixtures-preview/fixtures-preview.component.css
@@ -1,4 +1,4 @@
-.banner-table{position: relative;}
+/* .banner-table{position: relative;}
 .upcoming-list{
   position: absolute;
   left: 1.5rem;
@@ -34,4 +34,28 @@ a{display: block;margin: 1rem 0 0.5rem;text-align: right;}
   position: absolute;
   left: -40px;
   bottom: 20px;
+} */
+.fixture-title {
+  background: rgb(10,20,50, 0.7);
+  display: inline-block;
+  padding: 0.25rem 1rem;
+  color: white;
+  position: absolute;
+  z-index: 3;
+  top: -5rem;
+  right: 0;
 }
+.fixture-preview{
+  border-right: 1px solid #f2f2ff;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;margin-bottom: 1rem;
+  background: white;
+  box-shadow: 0 2px 15px -2px rgba(163, 162, 162, 0.15);
+}
+.fixtures{
+  position: relative;bottom: -100px;left: 0;z-index: 2;
+}
+table{border:none;padding: 0;margin: 0;}
+table tr td{border: none;padding: 0;margin: 0;}
+
