--- a/src/app/components/home/upcoming-prediction/upcoming-prediction.component.css
+++ b/src/app/components/home/upcoming-prediction/upcoming-prediction.component.css
@@ -1,7 +1,8 @@
 .prediction{
+  margin-top: 2rem;
   width: 100%;
   padding: 1rem;
-  border: 3px solid #272740;
+  border-bottom: 3px solid #272740;
   border-left: none;
   border-right: none;
 }
